src/test/ui/nll/ty-outlives/projection-fn.stderr
warning: not reporting region error due to -Znll
  --> $DIR/projection-fn.rs:24:5
   |
24 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to -Znll
  --> $DIR/projection-fn.rs:40:5
   |
40 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: failed type test: TypeTest { generic_kind: ProjectionTy { substs: Slice([T]), item_def_id: DefId(2/0:1695 ~ core[2633]::iter[0]::iterator[0]::Iterator[0]::Item[0]) }, lower_bound: '_#3r, point: bb5[0], span: $DIR/projection-fn.rs:24:5: 24:23, test: IsOutlivedByAnyRegionIn([]) }
  --> $DIR/projection-fn.rs:24:5
   |
24 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: failed type test: TypeTest { generic_kind: ProjectionTy { substs: Slice([T]), item_def_id: DefId(2/0:1695 ~ core[2633]::iter[0]::iterator[0]::Iterator[0]::Item[0]) }, lower_bound: '_#4r, point: bb5[0], span: $DIR/projection-fn.rs:40:5: 40:23, test: IsOutlivedByAnyRegionIn(['_#2r]) }
  --> $DIR/projection-fn.rs:40:5
   |
40 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

